--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.15.3",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/uuid": "^9.0.7",
     "firebase-admin": "^12.0.0",
@@ -17,6 +18,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
+    "sonner": "^1.3.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
