--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
     "@tanstack/react-query": "^5.15.3",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/uuid": "^9.0.7",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "firebase-admin": "^12.0.0",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.303.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
     "sonner": "^1.3.1",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
