--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.15.3",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/uuid": "^9.0.7",
