--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "dotenv": "^16.3.1",
+    "esbuild": "^0.19.11",
+    "esbuild-runner": "^2.2.2",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
